# plank

./: .gitignore  README.md  RELEASE  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  classes_plank.dot  pyproject.toml
.github/workflows/: python-publish-release.yml  python-publish.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled2-checkpoint.ipynb  Untitled3-checkpoint.ipynb  Untitled4-checkpoint.ipynb
configuration/: configuration.toml
plank/: __init__.py
plank/app/: __init__.py  context.py
plank/command/: __init__.py  base.py
plank/commandline/: __init__.py
plank/config/: __init__.py  attribute.py
plank/config/info/: __init__.py  app.py  extra.py  logger.py  path.py  plugin.py
plank/configuration/: __init__.py  info.py
plank/configuration/builtins/: app.py  extra.py  logger.py  path.py  plugin.py  service.py
plank/context/: __init__.py
plank/decorator/: action.py  backend.py  server.py  timing.py  version.py
plank/descriptor/: action.py  backend.py
plank/logger/: __init__.py
plank/metaclass/: singleton.py
plank/plugin/: __init__.py  module.py
plank/plugin/asset/: __init__.py
plank/plugin/resource/: __init__.py  dictionary.py  record.py
plank/resource/: configuration.toml
plank/server/: __init__.py  api.py  base.py  define.py  inline.py  scheme.py
plank/server/action/: __init__.py  serving.py  (+1 more)
plank/service/: __init__.py
plank/serving/: __init__.py  interface.py  service.py
plank/utils/: error.py  function.py  path.py
polymath/: __init__.py  define.py  env.py
polymath/app/: __init__.py  context.py  defaults.py
polymath/commandline/: __init__.py  base.py
polymath/config/: __init__.py  attribute.py  define.py  new.py
polymath/decorator/: backend.py  timing.py  version.py
polymath/descriptor/: backend.py
polymath/launcher/: __init__.py  app.py
polymath/logger/: __init__.py
polymath/plugin/: __init__.py  module.py
polymath/plugins/: __init__.py  manager.py
polymath/serializer/: __init__.py  abstract.py  coder.py  serializer.py
polymath/server/: __init__.py  base.py  inline.py
polymath/serving/: __init__.py  extension.py  message.py  service.py
polymath/utils/: error.py
test/: configuration.toml  pyproject.toml
test/cases/: test_application.py
test/cases/unittest_plugin_A/: __init__.py  delegate.py
(+33 files in other folders)
