[tool.poetry]
name = "plank"
version = "0.1.0.dev202"
description = ""
authors = ["Grady Zhuo <gradyzhuo@gmail.com>"]
include = [
    "plank/resource/configuration.toml"
]

packages = [
    { include = "plank" }
]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
envparse = "^0.2.0"
pyyaml = "^6.0"
toml = "^0.10.2"
pydantic = "^1.9.1"
nest-asyncio = "^1.5.5"
click = "^8.1.3"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
plank = 'plank.command:root_cmd'