[tool.poetry]
name = "plank"
version = "0.1.2.dev193"
description = ""
authors = ["Grady Zhuo <grady@ospark.org>"]
license = "Apache License 2.0"
include = [
    "plank/resource/template.toml"
]

packages = [
    { include = "plank" }
]

[tool.poetry.dependencies]
python = "^3.8"
envparse = "^0.2.0"
pyyaml = "^6.0"
pydantic = "^1.9.1"
nest-asyncio = "^1.5.5"
click = "^8.1.3"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
plank = 'plank.utils.command:root_cmd'