[tool.poetry]
name = "plank-unittest"
version = "0.1.3"
description = ""
authors = ["Grady Zhuo <grady@ospark.org>"]
license = "Apache License 2.0"
include = [
    "unittest_plugin_A"
]

[tool.poetry.dependencies]
python = "^3.8"
plank = {path=".."}

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
plank = 'plank.utils.command:root_cmd'